--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,19 +9,17 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.FitnessStudio">
-        <activity android:name=".SplashActivity"
+        <activity android:theme="@style/Theme.FitnessStudio.NoActionBar" android:name=".SplashActivity"
             android:screenOrientation="portrait">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
-
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:name=".RegisterActivity" />
-        <activity android:name=".MainActivity">
-        </activity>
-        <activity android:name=".AboutActivity" />
-        <activity android:name=".LoginActivity" />
+        <activity android:theme="@style/Theme.FitnessStudio" android:name=".MainActivity" />
+        <activity android:theme="@style/Theme.FitnessStudio.NoActionBar" android:name=".RegisterActivity" />
+        <activity android:theme="@style/Theme.FitnessStudio.NoActionBar" android:name=".LoginActivity" />
+        <activity android:theme="@style/Theme.FitnessStudio" android:name=".AboutActivity" />
 
     </application>
 
