--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,18 +9,32 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.FitnessStudio">
-        <activity android:theme="@style/Theme.FitnessStudio.NoActionBar" android:name=".SplashActivity"
-            android:screenOrientation="portrait">
+        <activity
+            android:name=".ForgotPasswordActivity"
+            android:theme="@style/Theme.FitnessStudio.NoActionBar">
+        </activity>
+        <activity
+            android:name=".SplashActivity"
+            android:screenOrientation="portrait"
+            android:theme="@style/Theme.FitnessStudio.NoActionBar">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
+
                 <category android:name="android.intent.category.LAUNCHER" />
             </intent-filter>
         </activity>
-        <activity android:theme="@style/Theme.FitnessStudio" android:name=".MainActivity" />
-        <activity android:theme="@style/Theme.FitnessStudio.NoActionBar" android:name=".RegisterActivity" />
-        <activity android:theme="@style/Theme.FitnessStudio.NoActionBar" android:name=".LoginActivity" />
-        <activity android:theme="@style/Theme.FitnessStudio" android:name=".AboutActivity" />
-
+        <activity
+            android:name=".MainActivity"
+            android:theme="@style/Theme.FitnessStudio" />
+        <activity
+            android:name=".RegisterActivity"
+            android:theme="@style/Theme.FitnessStudio.NoActionBar" />
+        <activity
+            android:name=".LoginActivity"
+            android:theme="@style/Theme.FitnessStudio.NoActionBar" />
+        <activity
+            android:name=".AboutActivity"
+            android:theme="@style/Theme.FitnessStudio" />
     </application>
 
 </manifest>
